--- a/src/app/pages/products/product.page.scss
+++ b/src/app/pages/products/product.page.scss
@@ -3,7 +3,7 @@
 .product-page {
   .banner {
     position: relative;
-    background: url('../../../assets/images/products-banner.png') center center;
+    background: url('../../../assets/images/product/prod_pic_1.jpg') center center;
     min-height: 25vh;
     &:before {
       content: '';
