--- a/src/app/pages/stories/stories.component.html
+++ b/src/app/pages/stories/stories.component.html
@@ -1,19 +1,19 @@
 <section class="stories-page">
   <div class="banner">
     <div class="content">
-      <h1>Stories</h1>
+      <h1>Stories: Comming soon...</h1>
     </div>
   </div>
 
   <div class="article">
     <div class="content">
-      <img src="../../../assets/images/default-placeholder.jpg">
       <div class="paragraph">
-        <h2>Test article</h2>
-        <p>Lorum ipsum</p>
+        <h2>We are currently working on some amazing stories</h2>
       </div>
     </div>
   </div>
+
+  <!--
 
   <div class="article">
       <div class="content">
@@ -23,7 +23,5 @@
         </div>
         <img src="../../../assets/images/default-placeholder.jpg">
       </div>
-    </div>
-
-
+    </div> -->
 </section>
