--- a/src/styles.scss
+++ b/src/styles.scss
@@ -150,7 +150,7 @@ h3 {
                 max-height: 25vh;
                 max-width: 25%;
                 width: 100%;
-                object-fit: contain;
+                // object-fit: contain;
                 margin: 0 2% 0 0;
             }
         }
@@ -177,7 +177,8 @@ h3 {
         justify-content: center;
 
         .content {
-            max-width: 1024px;
+            max-width: 1280px;
+            padding: 2% 10%;
         }
 
         &.image-banner {
