added suitable for string

--- a/src/app/components/products/product-card/product-card.component.html
+++ b/src/app/components/products/product-card/product-card.component.html
@@ -15,7 +15,7 @@
           {{ type.value }}
         </span>
       </li>
-      <li>Any brand/any type</li>
+      <li>{{suitableForString}}</li>
     </ul>
   </div>
 
