--- a/src/styles.scss
+++ b/src/styles.scss
@@ -177,7 +177,7 @@ h3 {
         justify-content: center;
 
         .content {
-            max-width: 1280px;
+            // max-width: 1280px;
             padding: 2% 10%;
         }
 
