--- a/src/app/components/products/product-detail/product-detail-mobile/product-detail-mobile.component.html
+++ b/src/app/components/products/product-detail/product-detail-mobile/product-detail-mobile.component.html
@@ -1,47 +1,69 @@
 <div class="modal">
-    <div class="product-modal">
-        <div class="modal-header">
-            <i class="material-icons icon-close" (click)="closeModal()">
-                clear
-            </i>
-        </div>
-        <div class="modal-content">
-            <div class="slideshow">
-                <div class="benefit-container">
-                    <span *ngFor="let type of types">{{type.value}}</span>
-                </div>
-
-                <img src="../../../assets/images/people.jpg"/>
-                <i class="material-icons left">keyboard_arrow_left</i>
-                <i class="material-icons right">keyboard_arrow_right</i>
-                <div class="img-banner">{{product?.name}}</div>
-            </div>
-            <div class="product-info">
-                <div class="content-title">
-                </div>
-                <div class="menu">
-                    <mat-tab-group mat-align-tabs="center">
-                        <mat-tab label="Description">
-                            <div class="details">
-                                <h1>Description</h1>
-                                {{product?.description}}
-                            </div>
-                        </mat-tab>
-                        <mat-tab label="Tech specs">
-                            <div class="details">
-                                <h1>Tech specs</h1>
-                                <div [innerHtml]="product.specString"></div>
-                            </div>
-                        </mat-tab>
-                        <mat-tab label="Benefits">
-                            <div class="details">
-                                <h1>Benefits</h1>
-                                {{product?.solution?.benefitDescription}}
-                            </div>
-                        </mat-tab>
-                    </mat-tab-group>
-                </div>
-            </div>
-        </div>
+  <div class="product-modal">
+    <div class="modal-header">
+      <i class="material-icons icon-close" (click)="closeModal()">
+        clear
+      </i>
     </div>
+    <div class="modal-content">
+      <div class="slideshow">
+        <div class="benefit-container">
+          <span
+            [ngStyle]="{ 'background-color': color }"
+            *ngFor="let type of types"
+            >{{ type.value }}</span
+          >
+        </div>
+
+        <img src="../../../assets/images/people.jpg" />
+        <i class="material-icons left">keyboard_arrow_left</i>
+        <i class="material-icons right">keyboard_arrow_right</i>
+        <div class="img-banner">
+          {{ product?.name }}
+        </div>
+      </div>
+      <div class="product-info">
+        <div class="content-title"></div>
+        <div class="menu">
+          <mat-tab-group mat-align-tabs="center">
+            <mat-tab label="Description">
+              <div class="details">
+                <h1>Description</h1>
+                {{ product?.description }}
+              </div>
+            </mat-tab>
+            <mat-tab label="Tech specs">
+              <div class="details">
+                <h1>Tech specs</h1>
+                <div [innerHtml]="product.specString"></div>
+              </div>
+            </mat-tab>
+            <mat-tab label="Benefits">
+              <div class="details">
+                <h1>Benefits</h1>
+                <span
+                  class="benefitString"
+                  *ngFor="let solution of solutionBenefits"
+                >
+                  <div class="legend-item">
+                    <div
+                      [ngStyle]="{
+                        'background-color': getColorByBenefit(solution),
+                        'margin-right': benefits ? '0' : '10px'
+                      }"
+                      class="colored"
+                    >
+                      {{ getTextByBenefit(solution) }}
+                    </div>
+                  </div>
+
+                  {{ solution }}
+                </span>
+              </div>
+            </mat-tab>
+          </mat-tab-group>
+        </div>
+      </div>
+    </div>
+  </div>
 </div>
