--- a/src/app/pages/services/services.component.scss
+++ b/src/app/pages/services/services.component.scss
@@ -2,4 +2,8 @@
     .banner {
         background: url('../../../assets/images/service/serv_pic_1.jpg') center center;
     }
+
+    .service-content {
+        display: block;
+    }
 }
