--- a/src/app/components/products/product-card/product-card.component.scss
+++ b/src/app/components/products/product-card/product-card.component.scss
@@ -1,108 +1,114 @@
 @import "../../../../assets/variables";
 
 .product-container {
-  border-radius: 5px;
-  max-width: 300px;
-  box-shadow: 0px 0px 10px 0px rgba(0,0,0,0.75);
-  display: flex;
-  flex-direction: column;
-  transition: all .2s ease-in-out;
-  position: relative;
-  overflow: hidden;
-  flex: 1 1 33.33%;
-  margin: 0 5px 30px 5px;
-  display: flex;
-
-  &:hover {
-    transform: scale(1.025);
-    cursor: pointer;
-  }
-
-  .product-header {
-    position: relative;
-    border-radius: 5px 5px 0 0;
-    overflow: hidden;
-    flex: 2;
-
-    img {
-      height: auto;
-      width: 100%;
-    }
-
-    .label-container {
-      display: flex;
-      flex-direction: column;
-      position: absolute;
-      top: 0;
-      left: 0;
-      margin: 20px;
-      border-radius: 4px;
-
-      .outer-span {
-        display: flex;
-        flex-direction: row;
-        flex-wrap: wrap;
-        span {
-          line-height: 1.5em;
-          color: white;
-          text-align: left;
-          padding: 2px;
-          margin-bottom: 3px;
-          text-transform: uppercase;
-          &:first-of-type {
-            border-radius: 4px 0 0 4px;
-            @media screen and (min-width: 768px) {
-              padding-left: 4px;
-            }
-          }
-          &:last-of-type {
-            border-radius: 0 4px 4px 0;
-            @media screen and (min-width: 768px) {
-              padding-right: 4px;
-            }
-          }
-        }
-      }
-    }
-  }
-
-  .product-content {
-    padding: 5px;
-    height: 75px;
-    overflow: hidden;
-    text-overflow: ellipsis;
-    margin-top: -5px;
-    box-sizing: border-box;
-    background-color: $footer-color;
+    border-radius: 5px;
+    max-width: 300px;
+    box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.75);
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    transition: all .2s ease-in-out;
+    position: relative;
+    overflow: hidden;
+    flex: 1 1 33.33%;
+    margin: 0 5px 30px 5px;
+    display: flex;
 
-    .suitable-for {
-      font-size: 12px;
-      text-transform: uppercase;
+    &:hover {
+        transform: scale(1.025);
+        cursor: pointer;
     }
 
-    ul {
-      margin-block-start: 0;
-      margin-block-end: 0;
-      list-style-type: square;
-      li {
-        font-weight: bold;
-      }
+    .product-header {
+        position: relative;
+        border-radius: 5px 5px 0 0;
+        overflow: hidden;
+        flex: 2;
+
+        img {
+            height: 200px;
+            width: 100%;
+        }
+
+        .label-container {
+            display: flex;
+            flex-direction: column;
+            position: absolute;
+            top: 0;
+            left: 0;
+            margin: 20px;
+            border-radius: 4px;
+
+            .outer-span {
+                display: flex;
+                flex-direction: row;
+                flex-wrap: wrap;
+
+                span {
+                    line-height: 1.5em;
+                    color: white;
+                    text-align: left;
+                    padding: 2px;
+                    margin-bottom: 3px;
+                    text-transform: uppercase;
+
+                    &:first-of-type {
+                        border-radius: 4px 0 0 4px;
+
+                        @media screen and (min-width: 768px) {
+                            padding-left: 4px;
+                        }
+                    }
+
+                    &:last-of-type {
+                        border-radius: 0 4px 4px 0;
+
+                        @media screen and (min-width: 768px) {
+                            padding-right: 4px;
+                        }
+                    }
+                }
+            }
+        }
     }
 
-    p {
-      text-overflow: ellipsis;
-      overflow: hidden;
-    }
-  }
+    .product-content {
+        padding: 5px;
+        height: 75px;
+        overflow: hidden;
+        text-overflow: ellipsis;
+        margin-top: -5px;
+        box-sizing: border-box;
+        background-color: $footer-color;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
 
-  .product-footer {
-    background-color: $card-background-color;
-    text-align: center;
-    padding:  10px;
-    box-shadow: 0 0 3px #ccc;
-    flex: 1;
-  }
+        .suitable-for {
+            font-size: 12px;
+            text-transform: uppercase;
+        }
+
+        ul {
+            margin-block-start: 0;
+            margin-block-end: 0;
+            list-style-type: square;
+
+            li {
+                font-weight: bold;
+            }
+        }
+
+        p {
+            text-overflow: ellipsis;
+            overflow: hidden;
+        }
+    }
+
+    .product-footer {
+        background-color: $card-background-color;
+        text-align: center;
+        padding: 10px;
+        box-shadow: 0 0 3px #ccc;
+        flex: 1;
+    }
 }
