--- a/src/app/components/products/product-detail/product-detail-desktop/product-detail-desktop.component.html
+++ b/src/app/components/products/product-detail/product-detail-desktop/product-detail-desktop.component.html
@@ -5,9 +5,29 @@
         {{ product.name }}
       </h1>
       <div class="slideshow">
-        <img src="../../../assets/images/people.jpg" />
-        <i class="material-icons">keyboard_arrow_left</i>
-        <i class="material-icons">keyboard_arrow_right</i>
+        <slideshow
+          #slideshow
+          [showArrows]="false"
+          [imageUrls]="imageSources"
+          [lazyLoad]="imageSources?.length > 1"
+          [autoPlayWaitForLazyLoad]="true"
+          [captionBackground]="'transparent'"
+          [showDots]="true"
+        >
+        </slideshow>
+        <!-- <img src="../../../assets/images/people.jpg" /> -->
+        <i
+          *ngIf="imageSources?.length > 1"
+          class="material-icons"
+          (click)="swipeLeft()"
+          >keyboard_arrow_left</i
+        >
+        <i
+          *ngIf="imageSources?.length > 1"
+          class="material-icons"
+          (click)="swipeRight()"
+          >keyboard_arrow_right</i
+        >
       </div>
     </div>
 
