--- a/src/styles.scss
+++ b/src/styles.scss
@@ -113,6 +113,9 @@ h3 {
     }
 
     &.image-banner {
+        justify-content: center;
+        display: flex;
+
         img {
             width: 100%;
             height: 25vh;
@@ -174,10 +177,8 @@ h3 {
 @media (min-width: 1280px) {
     .article {
         display: flex;
-        justify-content: center;
 
         .content {
-            // max-width: 1280px;
             padding: 2% 10%;
         }
 
